--- a/src/main/webapp/js/app/common/home.html
+++ b/src/main/webapp/js/app/common/home.html
@@ -1,15 +1,4 @@
 <header ng-include="'js/app/header.html'"></header>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12" style="margin-top: 80px">
-            <div class="jumbotron">
-                <h1 class="display-4">Bienvenidos a wildCART</h1>
-                <p class="lead">El programa para aprender a desarrollar aplicaciones web</p>
-                <hr class="my-4">
-                <p>Ciclo formativo DAW, curso 2018-2019</p>
-            </div>
-            <h1 style="margin-top: 70px"></h1>
-        </div>
-    </div>
-</div>
+<h1 style="margin-top: 70px">Bienvenidos a wildCart</h1>
+<h2>{{ruta}}</h2>
 <footer class="footer" ng-include="'js/app/footer.html'"></footer>
