--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -1,68 +1,116 @@
 <header ng-include="'js/app/header.html'"></header>
-<main role="main" class="container">
-    <div class="row" style="margin-top: 70px;">
-        <div class="col-6">
-            Selecciona el numero de registros por pagina
-        </div>
-        <div class="col-6">
-            <select class="form-control" id="exampleFormControlSelect1" ng-change="update()" ng-model="selectedItem">
-                <option>5</option>
-                <option>10</option>
-                <option>20</option>
-                <option>50</option>
-                <option>100</option>
-            </select>
-        </div>    
+<div class="container">
+    <div class="row">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2">Factura</h1>
+                <div class="btn-group" style="width:400px;">
+                    <p class="mt-2" style="width:200px;">Selecciona RPP: </p>
+                    <select class="form-control" 
+                            ng-change="update()" 
+                            ng-model="rpp" ng-options="value for value in select">
+                    </select>
+                </div>
+            </div>
+        </main>
     </div>
-    <div class="row" style="margin-top: 25px;">
-        <div class="col-12">
-            <table class="table table-hover table-dark">
-                <thead>
-                    <tr>
-                        <th class="text-center" scope="col">Id</th>
-                        <th class="text-center" scope="col">Fecha</th>
-                        <th class="text-center" scope="col">IVA</th>
-                        <th class="text-center" scope="col">ID Usuario</th>
-                        <th class="text-center" scope="col">Opción</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="dato in datos| limitTo: limitNgRepeat: startNgRepeat">
-                        <th class="text-center">{{dato.id}}</th>
-                        <td class="text-center">{{dato.fecha}}</td>
-                        <td class="text-center">{{dato.iva}}</td>
-                        <td class="text-center">{{dato.id_usuario}}</td>
-                        <td class="text-center">
-                            <button ng-click="viewReg(dato.id)" type="button" class="btn btn-light">
-                                <a >
-                                    <i class="far fa-eye">Ver</i>
-                                </a>
-                            </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-<!--    <div class="row">
-        <div class="col-3 mx-auto">
-            <nav aria-label="Page navigation example">
+    <div class="row">
+        <div class="col-9">
+            <nav aria-label="paginacion">
                 <ul class="pagination">
-                    <li ng-class="activeItem" ng-repeat="paginator in arrayPaginator" ng-click="loadTablePage(paginator)">
-                        <a class="page-link" href="#" >{{paginator}}</a>
+                    <li class="page-item">
+                        <a class="page-link" ng-show="page > 1" href="{{ob}}/plist/{{rpp}}/{{page - 1}}/{{orderURLCliente}}">Previous</a>
                     </li>
+                    <li class="page-item">
+                        <a class="page-link" ng-show="page > 2" href="{{ob}}/plist/{{rpp}}/1/{{orderURLCliente}}">1</a>
+                    </li>
+                    <li class="page-item" ng-class="{'active':(p == page), 'disabled': p === '...'}" ng-repeat="p in list2 track by $index">
+                        <a class="page-link" href="{{ob}}/plist/{{rpp}}/{{p}}/{{orderURLCliente}}">{{p}}</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" ng-show="page != totalPages - 1 && page != totalPages" href="{{ob}}/plist/{{rpp}}/{{totalPages}}/{{orderURLCliente}}">{{totalPages}}</a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" ng-show="page != totalPages" href="{{ob}}/plist/{{rpp}}/{{page--1}}/{{orderURLCliente}}">Next</a>
+                    </li>                    
                 </ul>
             </nav>
         </div>
-        <div class="col-3 mx-auto">
-            <button ng-click="atras()" ng-disabled="!max(dato)">
-                Previous
+        <div class="col-3">
+            <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
+                <i class="fa fa-broom"> Limpiar</i>
             </button>
-            <button ng-click="adelante()" ng-disabled="!max(dato)">
-                Next
-            </button>
+            <a  href="{{ob}}/create/"> 
+                <button type="button" class="btn btn-warning btn-sm" style="width: 100px; height:30px;">
+                    <i class="fa fa-plus"> Crear</i>
+                </button>
+            </a>
         </div>
-    </div>-->
+    </div>
 
-</main>
+
+    <div class="table-responsive">
+        <table class="table table-striped table-sm">
+            <tr class="thead-dark">
+                <th>
+                    ID
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'asc')">
+                        <i class="fas fa-long-arrow-alt-up"></i>
+                    </button>
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'desc')">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                    </button>
+                </th>
+                <th>
+                    FECHA
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('fecha', 'asc')">
+                        <i class="fas fa-long-arrow-alt-up"></i>
+                    </button>
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('fecha', 'desc')">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                    </button>
+                </th>
+                <th>
+                    IVA
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('iva', 'asc')">
+                        <a class="fas fa-long-arrow-alt-up" ></a>
+
+                    </button>
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('iva', 'desc')">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                    </button>
+                </th>
+                <th>
+                    USUARIO
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'asc')">
+                        <i class="fas fa-long-arrow-alt-up"></i>
+                    </button>
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'desc')">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                    </button>
+                </th>               
+                <th>
+                    Acciones                
+                </th>
+            </tr>
+            <tr ng-repeat="fila in ajaxDataFacturas">
+                <td>{{fila.id}}</td>
+                <td>{{fila.fecha}}</td>
+                <td>{{fila.iva}}</td>
+                <td><a href="usuario/view/{{fila.obj_Usuario.id}}">{{fila.obj_Usuario.nombre}} {{fila.obj_Usuario.ape1}} {{fila.obj_Usuario.ape2}}</a></td>             
+                <td> 
+                    <a  href="{{ob}}/view/{{fila.id}}"> 
+                        <button style="font-size:15px" class="btn btn-info"><i class="fa fa-eye"></i></button>
+                    </a> 
+                    <a  href="{{ob}}/edit/{{fila.id}}"> 
+                        <button style="font-size:15px" class="btn btn-success"><i class="fa fa-edit"></i></button>
+                    </a> 
+                    <a  href="{{ob}}/remove/{{fila.id}}"> 
+                        <button style="font-size:15px" class="btn btn-danger"><i class="fa fa-trash-alt"></i></button>
+                    </a> 
+                </td>                                  
+            </tr>
+        </table>
+    </div>
+</div>
 <footer class="footer" ng-include="'js/app/footer.html'"></footer>
