--- a/src/main/webapp/js/app/header.html
+++ b/src/main/webapp/js/app/header.html
@@ -1,34 +1,61 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="home">wildCART</a>
+    <a class="navbar-brand" href="/">WILDCART</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item" ng-class="{'active': isActive('/')}">
-                <a class="nav-link" href="home">
-                    <span class="p-2 bd-highlight"><i class="fas fa-home fa-1x"></i></span>Home<span class="sr-only">(current)</span></a>
+            <li class="nav-item" ng-class="{'active': (isActive('/home') || isActive('/'))}">
+                <a class="nav-link" href="home"><i class="fa fa-home"> Home</i> <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item" ng-class="{'active': isActive('/usuario/plist')}">
-                <a class="nav-link" href="usuario/plist">
-                    <span class="p-2 bd-highlight"><i class="fas fa-user fa-1x"></i></span>Usuarios</a>
-            </li>
-            <li class="nav-item" ng-class="{'active': isActive('/tipousuario/plist')}">
-                <a class="nav-link" href="tipousuario/plist">
-                     <span class="p-2 bd-highlight"><i class="fas fa-users fa-1x"></i></span>Tipos de usuario</a>
-            </li>
-            <li class="nav-item" ng-class="{'active': isActive('/producto/plist') || isActive('/producto/view/')}">
-                <a class="nav-link" href="producto/plist">Productos</a>
-            </li>
-            <li class="nav-item" ng-class="{'active': isActive('/tipoproducto/plist')}">
-                <a class="nav-link" href="tipoproducto/plist">Tipos de productos</a>
-            </li>
-            <li class="nav-item" ng-class="{'active': isActive('/factura/plist')}">
-                <a class="nav-link" href="factura/plist">Facturas</a>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false" ng-class="{'active': (isActive('/usuario/plist') || isActive('/tipousuario/plist') || isActive('/usuario/view') || isActive('/usuario/edit') || isActive('/usuario/remove') || isActive('/tipousuario/view')
+                               || isActive('/tipousuario/edit') || isActive('/tipousuario/remove') || isActive('/tipousuario/create') || isActive('/usuario/create'))}">
+                    <i class="fa fa-users"> Usuario</i>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="usuario/plist">Usuario</a>
+                    <a class="dropdown-item" href="tipousuario/plist">Tipo Usuario</a>                                        
+                </div>
             </li>
 
 
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false" ng-class="{'active': (isActive('/producto/plist') || isActive('/tipoproducto/plist')
+                               || isActive('/tipoproducto/view') || isActive('/tipoproducto/edit') || isActive('/tipoproducto/remove')
+                               || isActive('/producto/remove') || isActive('/producto/edit') || isActive('/producto/view'))}">
+                    Producto
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="producto/plist">Producto</a>
+                    <a class="dropdown-item" href="tipoproducto/plist">Tipo Producto</a>                                        
+                </div>
+            </li>
+
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false" ng-class="{'active': (isActive('/factura/plist') || isActive('/linea/plist')
+                               || isActive('/factura/view') || isActive('/factura/edit') || isActive('/factura/remove') || isActive('/linea/view')
+                               || isActive('/linea/remove') || isActive('/linea/edit'))}">
+                    Factura
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="factura/plist">Factura</a>
+                    <a class="dropdown-item" href="linea/plist">Linea</a>                                        
+                </div>
+            </li>
         </ul>
+        <div ng-show="!loginH">
+            <a href="usuario/login"><button type="button" class="btn btn-danger"><i class="fas fa-sign-in-alt"> Login</i></button></a>
+        </div>
+        <div ng-show="loginH">
+            <a href="usuario/view/{{usuariologeadoID}}"><button type="button" class="btn btn-info"><i class="fa fa-user-circle"> Bienvenido/a <strong style="color: black;">{{usuariologeado}}</strong> </i></button></a>
+            <a href="usuario/logout" ><button type="button" class="btn btn-primary"> <i class="fas fa-sign-out-alt"> Logout</i></button></a>
+        </div>
     </div>
 </nav>
