--- a/src/main/webapp/js/app/producto/view.html
+++ b/src/main/webapp/js/app/producto/view.html
@@ -1,28 +1,39 @@
 <header ng-include="'js/app/header.html'"></header>
 <main role="main" class="container">
 
-    <div class="mx-auto" style="margin-top: 80px">
-        <table class="table table-hover table-dark">
-            <tr>
-                <th class="text-center">Id</th>
-                <th class="text-center">Codigo</th>
-                <th class="text-center">Descripción</th>
-                <th class="text-center">Existencias</th>
-                <th class="text-center">Precio</th>
-                <th class="text-center">Tipo Producto</th>
-            </tr>
-            <tr>
-                <td class="text-center">{{ajaxData.id}}</td>
-                <td class="text-center">{{ajaxData.codigo}}</td>
-                <td class="text-center">{{ajaxData.desc}}</td>
-                <td class="text-center">{{ajaxData.existencias}}</td>
-                <td class="text-center">{{ajaxData.precio}}</td>
-                <td class="text-center">{{ajaxData.id_tipoProducto}}</td>
-            </tr>
-        </table>
-
-    </div>
-
+    <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
+    <div class="primeraParte"></div>
+    <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
+    <table class="table table-striped table-hover table-bordered">        
+        <caption>View de producto</caption>
+        <tr>
+            <th>ID</th>
+            <th>{{ajaxDatoProducto.id}}</th>
+        </tr>   
+        <tr>
+            <th>Codigo</th>
+            <td>{{ajaxDatoProducto.codigo}}</td>
+        </tr>
+        <tr>
+            <th>Descripción</th>
+            <td>{{ajaxDatoProducto.desc}}</td>        
+        </tr>
+        <tr>
+            <th>Existencias</th>
+            <td>{{ajaxDatoProducto.existencias}}</td>
+        </tr>
+        <tr>
+            <th>Precio</th>
+            <td>{{ajaxDatoProducto.precio}}</td>
+        </tr>
+        <tr>
+            <th>Foto</th>
+            <td>{{ajaxDatoProducto.foto}}</td>
+        </tr>
+        <tr>
+            <th>Tipo Producto</th>      
+        <td><a href="tipoproducto/view/{{ajaxDatoProducto.obj_tipoProducto.id}}">{{ajaxDatoProducto.obj_tipoProducto.desc}}</a></td>
+        </tr>      
+    </table>
 </main>
-
 <footer class="footer" ng-include="'js/app/footer.html'"></footer>
