--- a/src/main/webapp/js/app/usuario/edit.html
+++ b/src/main/webapp/js/app/usuario/edit.html
@@ -1,154 +1,157 @@
 <header ng-include="'js/app/header.html'"></header>
-<!-- ---------------------------------------------------------->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12" style="margin-top: 50px">
-            <!-- ---------------------------------------------------------->
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <div>                    
-                    <h1 class="h2"><span class="p-2 bd-highlight"><i class="fas fa-user fa-1x"></i></span>Edición de Usuario</h1>
-                </div>   
-                <div class="btn-toolbar mb-2 mb-md-0">
-                    <button class="btn btn-sm btn-success mr-2 ">Guardar</button>
-                    <button class="btn btn-sm mr-2 btn-primary">Usuarios</button>
-                    <button class="btn btn-sm btn-outline-secondary">Cerrar</button>
+<main role="main" class="container" style="margin-bottom: 100px;">
+
+    <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
+    <div class="primeraParte"></div>
+    <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a>    
+    <ng-form id="userForm" name="userForm" style="margin-bottom: 50px;" ng-show="!mensajeOK && !mensajeError">
+        <h3 style="text-align: center">Editar usuario</h3>
+
+        <div class="form-group row">
+            <label for="id" class="col-2 col-form-label">ID</label>
+            <div class="col-10">
+                <input type="text" class="form-control-plaintext" id="id" name="id" ng-disabled="true" ng-model="ajaxDatoUsuario.id" readonly />
+            </div>                
+        </div>   
+
+        <div class="form-group row">
+            <label for="dni" class="col-2 col-form-label">DNI</label>
+            <div class="col-10">
+                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.dni.$invalid && !userForm.dni.$pristine }" id="dni" name="dni" ng-model="ajaxDatoUsuario.dni" ng-required="true" ng-pattern="/^[0-9]{8}[TRWAGMYFPDXBNJZSQVHLCKET]$/"
+                       />
+                <div ng-show="userForm.dni.$invalid && !userForm.dni.$pristine && !userForm.dni.$error.pattern" class="alert alert-danger" >DNI requerido.</div>
+
+                <div ng-show="userForm.dni.$error.pattern" class="alert alert-danger" role="alert">
+                    Formato DNI no valido
                 </div>
             </div>
-            <!-- ---------------------------------------------------------->
-            <ng-form name="outerForm" class="form" ng-show="result == null">
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label"  for="id">Identificador:</label>
-                    <div class="control col-sm-1">
-                        <input ng-model="data.id"
-                               type="text"
-                               id="id"
-                               class="form-control"
-                               name="id"
-                               size="15"
-                               placeholder="id"
-                               disabled="disabled">
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row"
-                     ng-class="{'has-error': (outerForm.nombre.$error.required ||
-                                         outerForm.nombre.$error.minlength ||
-                                         outerForm.titulo.$error.maxlength)
-                                         && !outerForm.nombre.$pristine}">
-                    <label class="col-sm-2 col-form-label" for="nombre">Nombre:</label>
-                    <div class="control col-sm-5">
-                        <input ng-model="data.nombre"
-                               type="text"
-                               id="nombre"
-                               class="form-control"
-                               name="nombre"
-                               size="15"
-                               placeholder="nombre del usuario"
-                               minlength="1"
-                               maxlength="255"
-                               required>
-                        <span class="help-block" ng-show="!outerForm.nombre.$pristine && outerForm.nombre.$error.required">El campo nombre es obligatorio</span>
-                        <span class="help-block" ng-show="!outerForm.nombre.$pristine && outerForm.nombre.$error.minlength">El campo nombre debe tener al menos 10 caracteres</span>
-                        <span class="help-block" ng-show="!outerForm.nombre.$pristine && outerForm.nombre.$error.maxlength">El campo nombre debe tener como máximo 255 caracteres</span>
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label" for="ape1">Primer Apellido:</label>
-                    <div class="control col-sm-5">
-                        <input ng-model="data.ape1"
-                               type="text"
-                               id="apellidos"
-                               class="form-control"
-                               name="ape1"
-                               size="15"
-                               placeholder="primer apellido">
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label" for="ape2">Segundo Apellido:</label>
-                    <div class="control col-sm-5">
-                        <input ng-model="data.ape2"
-                               type="text"
-                               id="apellidos"
-                               class="form-control"
-                               name="ape2"
-                               size="15"
-                               placeholder="segundo apellido">
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label" for="login">Login:</label>
-                    <div class="control col-sm-2">
-                        <input ng-model="data.login"
-                               type="text"
-                               id="login"
-                               class="form-control"
-                               name="login"
-                               size="15"
-                               placeholder="login">
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-                <div class="form-group row">
-                    <tipousuario-selection 
-                        class="modal fade" 
-                        id="cadd-location-modal" 
-                        obj="data.obj_tipoUsuario"
-                        on-tipousuario-set="tipoUsuarioRefresh(this,false)">                          
-                    </tipousuario-selection>
-                    <label class="col-sm-2 col-form-label" for="obj_tipousuario">Tipo de usuario:</label>
-                    <div class="control col-sm-6">
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"
-                                      data-toggle="modal"
-                                      data-target="#cadd-location-modal">
-                                    <span class="fas fa-search"></span>
-                                </span>
-                            </div>
-                            <input ng-model="data.obj_tipoUsuario.id"
-                                   ng-change="tipoUsuarioRefresh(this,true)"
-                                   aria-describedby="basic-addon2"
-                                   class="form-control col-sm-1"
-                                   id="obj_tipousuario"
-                                   name="obj_tipousuario"
-                                   type="text"
-                                   ng-required
-                                   ng-model-options="{debounce: 1000}"
-                                   maxlength="2" />
-                            <div class="input-group-append">
-                                <span class="input-group-text">
-                                    <a href="#/tipousuario/view/{{data.obj_tipoUsuario.id}}">
-                                        <span class="p-2 bd-highlight"><i class="fas fa-users fa-1x"></i></span>
-                                        Tipo de usuario: {{data.obj_tipoUsuario.desc}}
-                                    </a>
-                                </span>
-                            </div>
-                        </div>
-                        <div ng-show="!outerForm.obj_tipousuario.$valid">Tipo de usuario no válido</div>
-                    </div>
-                </div>
-                <!-- ---------------------------------------------------------->
-            </ng-form>
-            <!-- ---------------------------------------------------------->
-            <div ng-show="result != null">
-                <div class="alert alert-success" ng-show="result.status == 200">
-                    <h2>Se ha modificado el usuario</h2>
-                    <a ng-href="#/usuario/view/{{id}}">Ver el usuario modificado</a>
-                </div>
-                <div class="alert alert-danger" ng-show="result.status != 200">
-                    <h2>Error al modificar el usuario: no se ha modificado el usuario</h2>
-                    <h3>Código: {{result.status}}</h3>
-                    <h3>Mensaje: {{result.message}}</h3>
-                </div>
-            </div>
-            <!-- ---------------------------------------------------------->
         </div>
+
+        <div class="form-group row">
+            <label for="nombre" class="col-2 col-form-label">Nombre</label>
+            <div class="col-10">
+                <input type="text" class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.nombre.$invalid && !userForm.nombre.$pristine }" id="nombre" name="nombre" ng-model="ajaxDatoUsuario.nombre" ng-required="true" ng-pattern="/^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$/"/>
+                <div ng-show="userForm.nombre.$invalid && !userForm.nombre.$pristine && !userForm.nombre.$error.pattern" class="alert alert-danger" role="alert">
+                    Nombre obligatorio
+                </div>
+                <div ng-show="userForm.nombre.$error.pattern" class="alert alert-danger" role="alert">
+                    Nombre no válido
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="ape1" class="col-2 col-form-label">Primer apellido</label>
+            <div class="col-10">
+                <input type="text"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.ape1.$invalid && !userForm.ape1.$pristine }" id="ape1" name="ape1" ng-model="ajaxDatoUsuario.ape1" ng-required="true" ng-pattern="/^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$/"/>
+                <div ng-show="userForm.ape1.$invalid && !userForm.ape1.$pristine && !userForm.ape1.$error.pattern" class="alert alert-danger" role="alert">
+                    Primer apellido obligatorio
+                </div>
+                <div ng-show="userForm.ape1.$error.pattern" class="alert alert-danger" role="alert">
+                    Primer apellido no válido
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="ape2" class="col-2 col-form-label">Segundo apellido</label>
+            <div class="col-10">
+                <input type="text"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.ape2.$invalid && !userForm.ape2.$pristine }" id="ape2" name="ape2" ng-model="ajaxDatoUsuario.ape2" ng-required="true"  ng-pattern="/^[a-zA-ZñÑáéíóúÁÉÍÓÚ\s]+$/" />
+                <div ng-show="userForm.ape2.$invalid && !userForm.ape2.$pristine && !userForm.ape2.$error.pattern" class="alert alert-danger" role="alert">
+                    Segundo apellido obligatorio
+                </div>
+                <div ng-show="userForm.ape2.$error.pattern" class="alert alert-danger" role="alert">
+                    Segundo apellido no válido
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="login" class="col-2 col-form-label">Login</label>
+            <div class="col-10">
+                <input type="text"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.login.$invalid && !userForm.login.$pristine }" id="login" name="login" ng-model="ajaxDatoUsuario.login" ng-required="true" />
+                <div ng-show="!userForm.login.$valid" class="alert alert-danger" role="alert">
+                    Login obligatorio
+                </div>
+            </div>
+        </div>
+
+        <!--        <div class="form-group row">
+                    <label for="id_tipoUsuario" class="col-2 col-form-label">Tipo Usuario</label>
+                    <div class="col-1">
+                        <input type="text" class="form-control" id="login" name="id_tipoUsuario" ng-model="ajaxDatoUsuario.obj_tipoUsuario.id" ng-required="true" /> 
+                        <div ng-show="!userForm.id_tipoUsuario.$valid" class="alert alert-danger" role="alert">
+                            Tipo usuario obligatorio
+                        </div>                
+                    </div>
+                    <div class="form-control col-2" style="border: 0px;" >
+                        <button class="btn btn-primary" ng-click="openModal('lg')" ><i class="fas fa-search"></i></button>                
+                    </div>
+                </div> -->
+
+        <!--        MODAL-->
+        <tipousuario-selection class="modal fade" id="cadd-location-modal" obj="ajaxDatoUsuario.obj_tipoUsuario"></tipousuario-selection>
+
+        <div class="form-group row">
+            <label for="obj_tipousuario" class="col-2 col-form-label">Tipo Usuario</label>
+            <div class="col-2">          
+                <div class="input-group">
+                    <input ng-model="ajaxDatoUsuario.obj_tipoUsuario.id"
+                           ng-change="tipoUsuarioRefresh(this)"
+                           aria-describedby="basic-addon2"
+                           id="obj_tipousuario"
+                           name="obj_tipousuario"
+                           type="text"
+                           size="5"
+                           ng-model-options="{debounce: 1000}"
+                           maxlength="5" ng-required="true"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.obj_tipousuario.$invalid && !userForm.obj_tipousuario.$pristine }" />
+                    <div class="input-group-prepend">
+                        <span class="input-group-text fas fa-search"
+                              data-toggle="modal"
+                              data-target="#cadd-location-modal">                                  
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="form-group " sytle="width: auto;" >
+                <a href="tipousuario/view/{{ajaxDatoUsuario.obj_tipoUsuario.id}}" class="input-group-text">
+                    <span >Tipo de usuario: {{ajaxDatoUsuario.obj_tipoUsuario.desc}}</span>
+                </a>
+            </div>
+        </div>
+
+        <!--        ---{{userForm.obj_tipousuario.$valid|json}}-->
+
+
+        <div class="row">
+            <label for="login" class="col-2 col-form-label"></label>
+            <div class="col-5">
+            <div ng-show="!userForm.obj_tipousuario.$valid" class="alert alert-danger" sytle="width: auto;" role="alert">
+                El tipo de usuario es incorrecto.. {{userForm.obj_tipousuario.$valid}}
+            </div>
+            </div>
+
+        </div>
+
+        <!--            <div class="form-group row">
+                        <label for="pass" class="col-2 col-form-label">>Contraseña</label>
+                        <input type="password" class="form-control" ng-class="{' is-invalid': userForm.pass.$invalid && !userForm.pass.$pristine}"
+                               id="pass" name="pass" ng-model="ajaxDatoUsuario.pass" ng-minlength="6" ng-required="true"/>
+                        <div ng-show="userForm.pass.$error.minlength" class="alert alert-danger" role="alert">
+                            La longitud de la constraseña es demasiado corta
+                        </div>
+                        <div ng-show="!userForm.pass.$valid" class="alert alert-danger" role="alert">
+                            Contraseña obligatorio
+                        </div>
+                    </div>-->
+        <button ng-click="guardar()" type="button" class="btn btn-primary" ng-disabled="userForm.$invalid">Guardar</button>
+    </ng-form>    
+    <div class="alert alert-success" ng-show="mensajeOK">
+        Datos actualizados correctamente del {{ob}} {{ajaxDatoUsuario.id}}
     </div>
-</div>
-<!-- ---------------------------------------------------------->
-<div ng-include="'js/app/footer.html'"></div>
+    <div class="alert alert-success" ng-show="mensajeError">
+        Error de servidor al grabar el {{ob}} {{ajaxDatoUsuario.id}}
+    </div>
+
+</main>
+<footer class="footer" ng-include="'js/app/footer.html'"></footer>
