--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,6 +70,7 @@
         <script src="js/app/tipoproducto/edit.js" type="text/javascript"></script>
         <script src="js/app/tipoproducto/remove.js" type="text/javascript"></script>
         <script src="js/app/tipoproducto/create.js" type="text/javascript"></script>
+        <script src="js/app/tipoproducto/selection.js" type="text/javascript"></script>
         
         <script src="js/app/linea/plist.js" type="text/javascript"></script>  
         <script src="js/app/linea/view.js" type="text/javascript"></script>
