--- a/src/main/webapp/js/app/footer.html
+++ b/src/main/webapp/js/app/footer.html
@@ -1,11 +1,3 @@
-<footer class="footer">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="d-flex flex-column bd-highlight mb-3">
-                    <span class="text-muted">wildCART - Curso 2018-2019</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+<div class="container">
+    <span class="text-muted">Kevin Domínguez Sisalima</span>
+</div>
