--- a/src/main/webapp/js/app/usuario/create.html
+++ b/src/main/webapp/js/app/usuario/create.html
@@ -93,7 +93,7 @@
                            type="text"
                            size="5"
                            ng-model-options="{debounce: 1000}"
-                           maxlength="5" ng-required="true"  class="form-control is-valid" ng-class="{ 'is-invalid' : userForm.id_tipoUsuario.$invalid && !userForm.id_tipoUsuario.$pristine }" />
+                           maxlength="5" ng-required="true"  class="form-control" ng-class="{ 'is-invalid' : userForm.id_tipoUsuario.$invalid && !userForm.id_tipoUsuario.$pristine }" />
                     <div class="input-group-prepend">
                         <span class="input-group-text fas fa-search"
                               data-toggle="modal"
