--- a/src/main/webapp/js/app/usuario/logout.html
+++ b/src/main/webapp/js/app/usuario/logout.html
@@ -1,4 +1,4 @@
-<header ng-include="'js/app/header.html'"></header>
+<header-component></header-component>
 
 <div class="container">
     <div class="row justify-content-md-center">
