--- a/src/main/webapp/js/app/usuario/view.html
+++ b/src/main/webapp/js/app/usuario/view.html
@@ -1,4 +1,4 @@
-<header ng-include="'js/app/header.html'"></header>
+<header-component></header-component>
 <main role="main" class="container">
     <div class="primeraParte"></div>
     <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
