--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,5 +76,7 @@
         <script src="js/app/linea/view.js" type="text/javascript"></script>
         <script src="js/app/linea/edit.js" type="text/javascript"></script>
         <script src="js/app/linea/remove.js" type="text/javascript"></script>
+        
+        <script src="js/app/components/header/header.js" type="text/javascript"></script>
     </body>            
 </html>
