--- a/src/main/webapp/js/app/common/home.html
+++ b/src/main/webapp/js/app/common/home.html
@@ -1,4 +1,4 @@
-<header ng-include="'js/app/header.html'"></header>
+<header-component></header-component>
 <h1 style="margin-top: 70px">Bienvenidos a wildCart</h1>
 <h2>{{ruta}}</h2>
 <footer class="footer" ng-include="'js/app/footer.html'"></footer>
