--- a/src/main/webapp/js/app/producto/remove.html
+++ b/src/main/webapp/js/app/producto/remove.html
@@ -1,4 +1,4 @@
-<header ng-include="'js/app/header.html'"></header>
+<header-component></header-component>
 <main role="main" class="container" style="margin-bottom: 100px;">
 
     <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
