edicion de contraseña de usuario totalmente funcional

--- a/src/main/webapp/js/app/linea/plist.html
+++ b/src/main/webapp/js/app/linea/plist.html
@@ -40,6 +40,11 @@
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
                 <i class="fa fa-broom"> Limpiar</i>
             </button>
+            <a  href="{{ob}}/create/"> 
+                <button type="button" class="btn btn-warning btn-sm" style="width: 100px; height:30px;">
+                    <i class="fa fa-plus"> Crear</i>
+                </button>
+            </a>
         </div>
     </div>
 
