--- a/src/main/webapp/js/app/footer.html
+++ b/src/main/webapp/js/app/footer.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <span class="text-muted">Kevin Domínguez Sisalima</span>
+    <span class="text-muted" style="text-align: center">Hector Martinez Martinez - 2DAW</span>
 </div>
