--- a/src/main/webapp/js/app/usuario/login.html
+++ b/src/main/webapp/js/app/usuario/login.html
@@ -1,6 +1,13 @@
 <header-component></header-component>
 
 <div class="container">
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-user-tie"></i> Login</h1>
+            </div>     
+        </div>
+    </div>
     <form name="userForm"  style="margin-top: 80px;" ng-show="formulario">
         <div class="form-group row justify-content-md-center">            
             <div class="col-sm-8 col-md-5">
