--- a/src/main/webapp/js/app/usuario/edit.html
+++ b/src/main/webapp/js/app/usuario/edit.html
@@ -3,7 +3,15 @@
 
     <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
     <div class="primeraParte"></div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a>    
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-user-tie"></i> Usuarios</h1>
+                <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
+            </div>     
+        </div>
+    </div>
+       
     <ng-form id="userForm" name="userForm" style="margin-bottom: 50px;" ng-show="!mensajeOK && !mensajeError">
         <h3 style="text-align: center">Editar usuario</h3>
 
