--- a/src/main/webapp/js/app/usuario/plist.html
+++ b/src/main/webapp/js/app/usuario/plist.html
@@ -3,7 +3,7 @@
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Usuarios</h1>
+                <h1 class="h2"><i class="fas fa-user-tie"></i> Usuarios</h1>
                 <div class="btn-group" style="width:400px;">
                     <p class="mt-2" style="width:200px;">Selecciona RPP: </p>
                     <select class="form-control" 
@@ -37,21 +37,22 @@
             </nav>
         </div>
         <div class="col-2">
-            <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
-                <i class="fa fa-broom"> Limpiar</i>
-            </button>
             <a  href="{{ob}}/create/"> 
-                <button type="button" class="btn btn-warning btn-sm" style="width: 100px; height:30px;">
-                    <i class="fa fa-plus"> Crear</i>
+                <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
+                    <i class="fas fa-user-plus"> Crear</i>
                 </button>
             </a>
+            <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
+                <i class="fas fa-toilet-paper"> Reset</i>
+            </button>
+            
         </div>
     </div>
 
 
     <div class="table-responsive">
         <table class="table table-striped table-sm">
-            <tr class="thead-dark">
+            <tr class="table-success">
                 <th>
                     ID
                     <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'asc')">
