--- a/src/main/webapp/js/app/usuario/view.html
+++ b/src/main/webapp/js/app/usuario/view.html
@@ -1,7 +1,15 @@
 <header-component></header-component>
 <main role="main" class="container">
     <div class="primeraParte"></div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-user-tie"></i> Usuarios</h1>
+                <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
+            </div>     
+        </div>
+    </div>
+    
     <table class="table table-striped table-hover table-bordered">        
         <caption>View de usuario</caption>
         <tr>
