--- a/src/main/webapp/js/app/producto/remove.html
+++ b/src/main/webapp/js/app/producto/remove.html
@@ -3,6 +3,14 @@
 
     <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
     <div class="primeraParte"></div>
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-box"></i> Productos</h1>
+                <a href="javascript:window.history.back();" class="btn btn-success" style="margin-top: 10px;">Volver </a>
+            </div>     
+        </div>
+    </div>
     <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
     <div ng-show="tabla">
         <table class="table table-striped table-hover table-bordered">        
