--- a/src/main/webapp/js/app/tipousuario/plist.html
+++ b/src/main/webapp/js/app/tipousuario/plist.html
@@ -39,7 +39,7 @@
         <div class="col-3">
             <a  href="{{ob}}/create/"> 
                 <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
-                    <i class="fas fa-user-plus"> Crear</i>
+                    <i class="fas fa-users"> Crear</i>
                 </button>
             </a>
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
