Pequeños cambios en titulos de operaciones

--- a/src/main/webapp/js/app/producto/create.html
+++ b/src/main/webapp/js/app/producto/create.html
@@ -7,12 +7,12 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-box"></i> Productos</h1>
+                <h3 style="text-align: center">Crear</h3>
                 <a href="javascript:window.history.back();" class="btn btn-success" style="margin-top: 10px;">Volver </a>
             </div>     
         </div>
     </div>   
     <form name="userForm" style="margin-bottom: 50px;" ng-show="!mensaje">
-        <h3 style="text-align: center">Crear Producto</h3>
         <div class="form-group row">
             <label for="codigo" class="col-2 col-form-label">Codigo</label>
             <div class="col-10">
