--- a/src/main/webapp/js/app/producto/remove.html
+++ b/src/main/webapp/js/app/producto/remove.html
@@ -7,11 +7,11 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-box"></i> Productos</h1>
+                <h3 style="text-align: center">Eliminar</h3>
                 <a href="javascript:window.history.back();" class="btn btn-success" style="margin-top: 10px;">Volver </a>
             </div>     
         </div>
     </div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
     <div ng-show="tabla">
         <table class="table table-striped table-hover table-bordered">        
             <caption>Usuarios remove</caption>
