--- a/src/main/webapp/js/app/tipoproducto/create.html
+++ b/src/main/webapp/js/app/tipoproducto/create.html
@@ -5,12 +5,12 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-boxes"></i> Tipos de Producto</h1>
+                <h3 style="text-align: center">Crear</h3>
                 <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
             </div>     
         </div>
     </div>
     <form name="tipoProductoForm" style="margin-bottom: 50px;" ng-show="!mensaje">
-        <h3 style="text-align: center">Crear Tipo Producto</h3>
         <div class="form-group row">
             <label for="descripcion" class="col-2 col-form-label">Descripcion</label>
             <div class="col-8">
