--- a/src/main/webapp/js/app/tipousuario/create.html
+++ b/src/main/webapp/js/app/tipousuario/create.html
@@ -5,19 +5,12 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-user-cog"></i> Tipos de usuario</h1>
+                <h3 style="text-align: center">Crear</h3>
                 <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
             </div>     
         </div>
     </div>
     <form name="userForm" style="margin-bottom: 50px;" ng-show="!mensaje">
-        <h3 style="text-align: center">Crear Tipo Usuario</h3>
-<!--        <div class="form-group row">            
-            <label for="id" class="col-2 col-form-label">ID</label>
-            <div class="col-8">
-                <input type="text" class="form-control" id="id" name="id" ng-disabled="true" ng-model="id" />
-            </div>
-        </div>-->
-
         <div class="form-group row">
             <label for="descripcion" class="col-2 col-form-label">Descripcion</label>
             <div class="col-8">
