--- a/src/main/webapp/js/app/tipousuario/edit.html
+++ b/src/main/webapp/js/app/tipousuario/edit.html
@@ -7,12 +7,12 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-user-cog"></i> Tipos de usuario</h1>
+                <h3 style="text-align: center">Editar</h3>
                 <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
             </div>     
         </div>
     </div> 
     <form name="userForm" style="margin-bottom: 50px;" ng-show="!mensaje">
-        <h3 style="text-align: center">Editar Tipo Usuario</h3>
         <div class="form-group row">            
             <label for="id" class="col-2 col-form-label">ID</label>
             <div class="col-8">
