--- a/src/main/webapp/js/app/usuario/create.html
+++ b/src/main/webapp/js/app/usuario/create.html
@@ -7,11 +7,11 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-user-tie"></i> Usuarios</h1>
+                <h3 style="text-align: center">Crear</h3>
                 <a href="javascript:window.history.back();" class="btn btn-success" style="margin-top: 10px;">Volver </a>
             </div>     
         </div>
     </div>
-    <h3 style="text-align: center; margin-bottom: 50px;">Crear Tipo Usuario</h3>
     
     <form name="userForm" style="margin-bottom: 50px; width: 60%; margin: 0 auto;" ng-show="!mensaje">
         
