--- a/src/main/webapp/js/app/usuario/edit.html
+++ b/src/main/webapp/js/app/usuario/edit.html
@@ -7,14 +7,14 @@
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2"><i class="fas fa-user-tie"></i> Usuarios</h1>
+                <h3 style="text-align: center">Editar</h3>
                 <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
             </div>     
         </div>
     </div>
        
     <ng-form id="userForm" name="userForm" style="margin-bottom: 50px;" ng-show="!mensajeOK && !mensajeError">
-        <h3 style="text-align: center">Editar usuario</h3>
-
+        
         <div class="form-group row">
             <label for="id" class="col-3 col-form-label">ID</label>
             <div class="col-8">
@@ -124,7 +124,7 @@
 
 
             <div class="form-group " style="width: auto;" >
-                <a href="tipousuario/view/{{ajaxDatoUsuario.obj_tipoUsuario.id}}" class="input-group-text">
+                <a href="tipousuario/view/{{ajaxDatoUsuario.obj_tipoUsuario.id}}" class="input-group-text" ng-disabled="link">
                     <span >Tipo de usuario: {{ajaxDatoUsuario.obj_tipoUsuario.desc}}</span>
                 </a>
             </div>
