--- a/src/main/webapp/js/app/tipousuario/plist.html
+++ b/src/main/webapp/js/app/tipousuario/plist.html
@@ -81,14 +81,14 @@
                 <td>{{fila.id}}</td>
                 <td>{{fila.desc}}</td>            
                 <td class="acciones"> 
-                    <a  href="{{ob}}/view/{{fila.id}}"> 
-                        <button class="btn btn-info accion"  id="ver"><i class="fa fa-eye"></i></button>
+                    <a  href="{{ob}}/view/{{fila.id}}" class="accion"> 
+                        <button class="btn btn-info "  id="ver"><i class="fa fa-eye"></i></button>
                     </a> 
-                    <a  href="{{ob}}/edit/{{fila.id}}"> 
-                        <button class="btn btn-success accion"  id="editar"><i class="fa fa-edit"></i></button>
+                    <a  href="{{ob}}/edit/{{fila.id}}" class="accion"> 
+                        <button class="btn btn-success"  id="editar"><i class="fa fa-edit"></i></button>
                     </a> 
-                    <a  href="{{ob}}/remove/{{fila.id}}"> 
-                        <button class="btn btn-danger accion"  id="ver"><i class="fa fa-trash-alt"></i></button>
+                    <a  href="{{ob}}/remove/{{fila.id}}" class="accion"> 
+                        <button class="btn btn-danger"  id="borrar"><i class="fa fa-trash-alt"></i></button>
                     </a> 
                 </td>                                  
             </tr>
