--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -56,6 +56,7 @@
         <script src="js/app/factura/edit.js" type="text/javascript"></script>
         <script src="js/app/factura/remove.js" type="text/javascript"></script>
         <script src="js/app/factura/create.js" type="text/javascript"></script>
+        <script src="js/app/factura/plistlinea.js" type="text/javascript"></script>
         
         <script src="js/app/usuario/plist.js" type="text/javascript"></script>
         <script src="js/app/usuario/view.js" type="text/javascript"></script>        
