Cuando se crea la factura YA SI te lleva a las facturas del usuario (pero no a esa factura en concreto, meditar que opcion es mejor).
Falta hacer bien:
- Factura (fechas, modal y diseño).
- Lineas (modales y diseño).
- Cambiar diseño de todos los plists (maestros/esclavos, etc.).
- Hacer maestro/esclavo de tipo usuario y tipo producto.

--- a/src/main/webapp/js/app/carrito/plist.html
+++ b/src/main/webapp/js/app/carrito/plist.html
@@ -60,7 +60,7 @@
     </div>    
     <div ng-show="productoComprado" class="row justify-content-md-center">        
         <div class="alert alert-success col-5" style="text-align: center">
-            Se ha creado la factura correctamente <!--<a href="usuario/plistfactura/{{usuarioLogeado}}"> VER FACTURA </a> == NO VA AUN -->
+            Se ha creado la factura correctamente. <a href="usuario/plistfactura/{{idUsu}}"> Ver la factura. </a>
         </div>
     </div>    
 </div>
