--- a/src/main/webapp/js/app/factura/remove.html
+++ b/src/main/webapp/js/app/factura/remove.html
@@ -4,14 +4,14 @@
     <div class="row">
         <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2"><i class="fas fa-file-invoice"></i> Tipos de Factura</h1>
+                <h1 class="h2"><i class="fas fa-file-invoice"></i> Factura</h1>
+                <h3 style="text-align: center">Eliminar</h3>
                 <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
             </div>     
         </div>
     </div>
     <div ng-show="tabla">
-        <table class="table table-striped table-hover table-bordered">        
-            <caption>Factura remove</caption>
+        <table class="table table-striped table-hover table-bordered">
             <tr>
                 <th>ID</th>
                 <th>{{ajaxDatoFactura.id}}</th>
