--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -114,14 +114,14 @@
                     </a>
                 </td>
                 <td class="acciones"> 
-                    <a  href="{{ob}}/view/{{fila.id}}"> 
-                        <button class="btn btn-info accion"  id="ver"><i class="fa fa-eye"></i></button>
+                    <a  href="{{ob}}/view/{{fila.id}}" class="btn btn-info accion"  id="ver"> 
+                        <i class="fa fa-eye"></i>
                     </a> 
-                    <a  href="{{ob}}/edit/{{fila.id}}"> 
-                        <button class="btn btn-success accion"  id="editar"><i class="fa fa-edit"></i></button>
+                    <a  href="{{ob}}/edit/{{fila.id}}" class="btn btn-success accion"  id="editar"> 
+                        <i class="fa fa-edit"></i>
                     </a> 
-                    <a  href="{{ob}}/remove/{{fila.id}}"> 
-                        <button class="btn btn-danger accion"  id="borrar"><i class="fa fa-trash-alt"></i></button>
+                    <a  href="{{ob}}/remove/{{fila.id}}" class="btn btn-danger accion"  id="borrar"> 
+                        <i class="fa fa-trash-alt"></i>
                     </a> 
                 </td>                                  
             </tr>
